website spacing fix

--- a/src/containers/shared/components/TokenSearchResults/styles.scss
+++ b/src/containers/shared/components/TokenSearchResults/styles.scss
@@ -115,3 +115,7 @@ color: $black-50;
 }
 
 }
+
+.result-domain-link {
+  margin-left: 0.25rem;
+}
